# Yog-Mod-Loader

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  LICENSING.md  README.md  build.sh  version.properties
.github/: dependabot.yml
example-mod/: Cargo.toml  yog.toml
example-mod/data/yog/recipes/: ruby.json
example-mod/src/: book.rs  lib.rs  render.rs
example-mod/src/commands/: mod.rs
example-mod/src/content/: mod.rs
example-mod/src/events/: mod.rs
example-mod/src/network/: mod.rs
fabric/: build.gradle  gradle.properties  settings.gradle
fabric/gradle/wrapper/: gradle-wrapper.properties
fabric/src/main/java/dev/yog/: NativeBridge.java  NativeDraw.java  YogBlockItem.java  YogBookItem.java  YogBookScreen.java  YogClient.java  YogHost.java  YogPackProvider.java  YogShapedBlock.java  YogUILayout.java  YogUIScreen.java
fabric/src/main/java/dev/yog/mixin/: AdvancementMixin.java  CraftingMixin.java  ServerInteractionMixin.java
fabric/src/main/resources/: fabric.mod.json  yog.mixins.json
fabric/versions/: 1.20.1.properties  1.21.1.properties
forge/: build.gradle  gradle.properties  settings.gradle
forge/gradle/wrapper/: gradle-wrapper.properties
forge/src/main/java/dev/yog/: NativeDraw.java  YogClient.java  YogHost.java
forge/versions/: 1.20.1.properties  1.21.1.properties
java-common/src/main/java/dev/yog/: YogConnectingLogic.java  YogProps.java  YogUILayout.java
java-common/src/main/java/dev/yog/block/: YogConnectingLogic.java  package-info.java
java-common/src/main/java/dev/yog/dimension/: YogDimension.java  YogDimensionDef.java  YogDimensionListener.java  YogDimensionProvider.java  YogDimensionType.java  YogDimensionTypeBuilder.java  YogDimensions.java  package-info.java
java-common/src/main/java/dev/yog/ui/: YogUILayout.java  package-info.java
java-common/src/main/java/dev/yog/util/: PropertyConverter.java  YogProps.java  package-info.java
neoforge/: build.gradle  gradle.properties  settings.gradle
neoforge/gradle/wrapper/: gradle-wrapper.properties
neoforge/src/main/java/dev/yog/: NativeBridge.java  NativeDraw.java  YogBookItem.java  YogClient.java  YogHost.java  YogItem.java  YogPackProvider.java  YogShapedBlock.java
neoforge/versions/: 1.20.1.properties  1.21.1.properties
rust/: Cargo.toml  release.sh
rust/crates/yog-abi/: Cargo.toml
rust/crates/yog-abi/src/: lib.rs
rust/crates/yog-api/: Cargo.toml
rust/crates/yog-api/src/: events.rs  interop.rs  lib.rs  registry.rs  server.rs
rust/crates/yog-book/: Cargo.toml
rust/crates/yog-book/src/: font.rs  lib.rs  renderer.rs  state.rs  svg.rs  theme.rs
rust/crates/yog-cli/: Cargo.toml  build.rs
rust/crates/yog-cli/src/: main.rs
rust/crates/yog-command/: Cargo.toml
rust/crates/yog-command/src/: lib.rs
rust/crates/yog-config/: Cargo.toml
rust/crates/yog-config/src/: lib.rs
rust/crates/yog-core/: Cargo.toml
rust/crates/yog-core/src/: lib.rs  server.rs
rust/crates/yog-debugger/: Cargo.toml
rust/crates/yog-debugger/src/: dap.rs  discovery.rs  lib.rs  maps.rs  ptrace_debugger.rs  source_breakpoints.rs
rust/crates/yog-debugger/tests/: discovery.rs  ptrace_debugger.rs
rust/crates/yog-debugger/tests/fixtures/: fixture.rs
rust/crates/yog-dimensions/: Cargo.toml
rust/crates/yog-dimensions/src/: lib.rs
rust/crates/yog-entity/: Cargo.toml
rust/crates/yog-entity/src/: lib.rs
rust/crates/yog-event/: Cargo.toml
rust/crates/yog-event/src/: events.rs  lib.rs  registry.rs
rust/crates/yog-example-mod/: Cargo.toml
rust/crates/yog-example-mod/src/: lib.rs
rust/crates/yog-gfx/: Cargo.toml
rust/crates/yog-gfx/src/: core.rs  draw2d.rs  lib.rs
rust/crates/yog-gfx/src/gl/: mod.rs
rust/crates/yog-hot-reload/: Cargo.toml
rust/crates/yog-hot-reload/src/: lib.rs
rust/crates/yog-hot-reload/tests/: hot_reload.rs
rust/crates/yog-hot-reload/tests/fixtures/: fixture.rs
rust/crates/yog-interop/: Cargo.toml
rust/crates/yog-interop/src/: lib.rs
rust/crates/yog-inventory/: Cargo.toml  DESIGN.md
rust/crates/yog-inventory/src/: lib.rs
rust/crates/yog-logging/: Cargo.toml
rust/crates/yog-logging/src/: lib.rs
rust/crates/yog-network/: Cargo.toml
rust/crates/yog-network/src/: lib.rs
rust/crates/yog-player/: Cargo.toml
rust/crates/yog-player/src/: lib.rs
rust/crates/yog-registry/: Cargo.toml
rust/crates/yog-registry/src/: lib.rs
rust/crates/yog-runtime/: Cargo.toml
rust/crates/yog-runtime/src/: control_socket.rs  lib.rs  ui_jni.rs
rust/crates/yog-storage/: Cargo.toml
rust/crates/yog-storage/src/: lib.rs
rust/crates/yog-symbols/: Cargo.toml
rust/crates/yog-symbols/src/: lib.rs
rust/crates/yog-symbols/tests/: symbol_table.rs
rust/crates/yog-symbols/tests/fixtures/: fixture.rs
rust/crates/yog-ui/: Cargo.toml
rust/crates/yog-ui/src/: layout.rs  lib.rs  render.rs  slot_cache.rs  text.rs  widget.rs
rust/crates/yog-world/: Cargo.toml
rust/crates/yog-world/src/: lib.rs
scripts/: gen_refmap.py
