[package]
name = "yog-example-mod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Example Yog mod, built on its own into a .yog artifact."

[lib]
# A Yog mod is a cdylib the runtime dlopen's at startup.
crate-type = ["cdylib"]

[dependencies]
# In a real third-party mod this would be a published crate version; in this
# monorepo we point at the local facade.
yog-api = { path = "../rust/crates/yog-api" }
