[workspace]
resolver = "2"
members = [
    # stable C ABI shared between mods and the runtime (permissive)
    "crates/yog-abi",
    # domain crates (permissive — see LICENSING.md)
    "crates/yog-core",
    "crates/yog-event",
    "crates/yog-world",
    "crates/yog-entity",
    "crates/yog-player",
    "crates/yog-registry",
    "crates/yog-network",
    "crates/yog-command",
    # infrastructure (permissive)
    "crates/yog-logging",
    "crates/yog-storage",
    "crates/yog-config",
    # facade mod authors depend on
    "crates/yog-api",
    # graphics subsystem — low-level GL pipeline access for mods (permissive)
    "crates/yog-gfx",
    # build tooling
    "crates/yog-cli",
    # engine (AGPL)
    "crates/yog-runtime",
]
# Note: example-mod lives in ../example-mod and builds on its own (like any
# third-party mod), producing a .yog artifact via `yog build`.

[workspace.package]
version = "0.1.0"
edition = "2021"
# Default for the protected engine (runtime + host). The mod-author-facing
# `yog-api` and the example mod override this with a permissive license so the
# mod ecosystem stays free — see LICENSING.md.
license = "AGPL-3.0-only"
