[workspace]
resolver = "2"
members = [
    # stable C ABI shared between mods and the runtime (permissive)
    "crates/yog-abi",
    # domain crates (permissive — see LICENSING.md)
    "crates/yog-core",
    "crates/yog-event",
    "crates/yog-world",
    "crates/yog-entity",
    "crates/yog-player",
    "crates/yog-registry",
    "crates/yog-network",
    "crates/yog-command",
    # infrastructure (permissive)
    "crates/yog-logging",
    "crates/yog-storage",
    "crates/yog-config",
    # facade mod authors depend on
    "crates/yog-api",
    # in-game book/documentation system (Patchouli-like)
    "crates/yog-book",
    # graphics subsystem — low-level GL pipeline access for mods (permissive)
    "crates/yog-gfx",
    # UI framework — flexbox layout + widgets on top of yog-gfx
    "crates/yog-ui",
    # build tooling
    "crates/yog-cli",
    # engine (AGPL)
    "crates/yog-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["F000NK, Yog Team, Voluntas Progressus"]
# Default for the protected engine (runtime + host). The mod-author-facing
# `yog-api` and the example mod override this with a permissive license so the
# mod ecosystem stays free — see LICENSING.md.
license = "AGPL-3.0-only"
