[workspace]
resolver = "2"
members = [
    # stable C ABI shared between mods and the runtime (permissive)
    "crates/yog-abi",
    # domain crates (permissive — see LICENSING.md)
    "crates/yog-core",
    "crates/yog-event",
    "crates/yog-world",
    "crates/yog-entity",
    "crates/yog-player",
    "crates/yog-registry",
    "crates/yog-network",
    "crates/yog-command",
    # infrastructure (permissive)
    "crates/yog-logging",
    "crates/yog-storage",
    "crates/yog-config",
    # facade mod authors depend on
    "crates/yog-api",
    # in-game book/documentation system (Patchouli-like)
    "crates/yog-book",
    # graphics subsystem — low-level GL pipeline access for mods (permissive)
    "crates/yog-gfx",
    # UI framework — flexbox layout + widgets on top of yog-gfx
    "crates/yog-ui",
    # inventory framework — real Container/Menu screens (BlockEntity-backed)
    "crates/yog-inventory",
    # inter-mod communication (proc-macros)
    "crates/yog-interop",
    # build tooling
    "crates/yog-cli",
    # engine (AGPL)
    "crates/yog-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["F000NK, Yog Team, Voluntas Progressus"]
# Default for the protected engine (runtime + host). The mod-author-facing
# `yog-api` and the example mod override this with a permissive license so the
# mod ecosystem stays free — see LICENSING.md.
license = "AGPL-3.0-only"

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
rkyv = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.18"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
jni = "0.21"
libloading = "0.9"
glow = "0.17"

[patch.crates-io]
yog-abi      = { path = "crates/yog-abi" }
yog-core     = { path = "crates/yog-core" }
yog-event    = { path = "crates/yog-event" }
yog-world    = { path = "crates/yog-world" }
yog-entity   = { path = "crates/yog-entity" }
yog-player   = { path = "crates/yog-player" }
yog-registry = { path = "crates/yog-registry" }
yog-network  = { path = "crates/yog-network" }
yog-command  = { path = "crates/yog-command" }
yog-logging  = { path = "crates/yog-logging" }
yog-storage  = { path = "crates/yog-storage" }
yog-config   = { path = "crates/yog-config" }
yog-api      = { path = "crates/yog-api" }
yog-book     = { path = "crates/yog-book" }
yog-gfx      = { path = "crates/yog-gfx" }
yog-ui       = { path = "crates/yog-ui" }
yog-inventory = { path = "crates/yog-inventory" }
yog-interop   = { path = "crates/yog-interop" }
