[package]
name = "yog-api"
version = "0.65.0"
edition.workspace = true
authors.workspace = true
# Permissive ON PURPOSE: mods link this crate, so AGPL here would force every
# mod to be AGPL and kill the ecosystem. The protected part is the runtime/host.
license = "MIT OR Apache-2.0"
description = "Yog — ergonomic Rust API for writing Minecraft mods (facade)."

[dependencies]
yog-abi  = "0.18"
yog-core = "0.3"
yog-event = "0.3"
yog-world = "0.3"
yog-entity = "0.3"
yog-player = "0.4"
yog-registry = "0.18"
yog-network = "0.1"
yog-command = "0.1"
yog-logging = "0.1"
yog-interop = "0.10"
yog-storage = "0.1"
yog-config  = "0.1"
yog-gfx     = "0.15"
yog-ui      = "0.26"
yog-book = "0.46"
yog-inventory = "0.4"


rkyv.workspace = true
ctor.workspace = true
