[package]
name = "yog-api"
version = "0.74.0"
edition.workspace = true
authors.workspace = true
# Permissive ON PURPOSE: mods link this crate, so AGPL here would force every
# mod to be AGPL and kill the ecosystem. The protected part is the runtime/host.
license = "MIT OR Apache-2.0"
description = "Yog — ergonomic Rust API for writing Minecraft mods (facade)."

[dependencies]
yog-abi  = "0.20"
yog-core = "0.3"
yog-event = "0.3"
yog-world = "0.3"
yog-entity = "0.3"
yog-player = "0.4"
yog-registry = "0.20"
yog-network = "0.1"
yog-command = "0.1"
yog-logging = "0.1"
yog-interop = "0.17"
yog-storage = "0.1"
yog-config  = "0.1"
yog-gfx     = "0.17"
yog-ui      = "0.28"
yog-book = "0.48"
yog-inventory = "0.6"


rkyv.workspace = true
linkme = "0.3"
