[package]
name = "yog-api"
version = "0.78.0"
edition.workspace = true
authors.workspace = true
# Permissive ON PURPOSE: mods link this crate, so AGPL here would force every
# mod to be AGPL and kill the ecosystem. The protected part is the runtime/host.
license = "MIT OR Apache-2.0"
description = "Yog — ergonomic Rust API for writing Minecraft mods (facade)."

[dependencies]
yog-abi  = "0.21"
yog-core = "0.3"
yog-event = "0.4"
yog-world = "0.3"
yog-entity = "0.3"
yog-player = "0.4"
yog-registry = "0.21"
yog-network = "0.1"
yog-command = "0.2"
yog-logging = "0.1"
yog-interop = "0.20"
yog-storage = "0.1"
yog-config  = "0.1"
yog-gfx     = "0.18"
yog-ui      = "0.29"
yog-book = "0.49"
yog-inventory = "0.7"


rkyv.workspace = true
ctor.workspace = true
