[package]
name = "yog-book"
version = "0.50.0"
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "In-game book/documentation framework for Yog mods (Patchouli-like)."

[dependencies]
yog-registry = { version = "0.22", features = ["serde"] }
yog-ui  = "0.30"
yog-gfx = "0.19"

# Serialization (for runtime JSON parsing)
serde.workspace      = true
serde_json.workspace = true
png.workspace        = true

[features]
default = []
# Enable SVG rasterization: add resvg = "0.41" to Cargo.toml, then enable this feature.
svg   = []
# Enable custom font rendering: add fontdue = "0.8" to Cargo.toml, then enable this feature.
fonts = []
full  = ["svg", "fonts"]
