[package]
name = "yog-cli"
version = "0.5.2"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Yog build tool — `yog build` compiles a mod and packages it as .yog."

[[bin]]
name = "yog"
path = "src/main.rs"

[dependencies]
zip = { version = "8.6", default-features = false, features = ["deflate"] }
