[package]
name = "yog-debugger"
version = "0.3.0"
edition.workspace = true
license.workspace = true
description = "ptrace-based native debugger for Yog mods, speaking the Debug Adapter Protocol (DAP)."

[dependencies]
yog-symbols = "0.1"
yog-hot-reload = "0.2"
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
