[package]
name = "yog-dimensions"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "Yog custom dimensions — dimension-type definitions and runtime chunk generation."

[dependencies]
yog-abi = "0.25"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
