[package]
name = "yog-registry"
version = "0.14.0"
edition = "2021"
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "Yog content registry — register items, blocks, recipes, etc."

[dependencies]
yog-abi = "0.14"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
