[package]
name = "yog-registry"
version = "0.24.0"
edition = "2021"
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "Yog content registry — register items, blocks, recipes, etc."

[dependencies]
yog-abi = "0.24"
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
