[package]
name = "yog-runtime"
version = "0.66.0"
edition.workspace = true
license.workspace = true
description = "Yog runtime — native library bridging the Fabric host to Rust mods via JNI."

[lib]
# cdylib produces libyog_runtime.so / .dylib / yog_runtime.dll, loaded by the
# Fabric host via System.loadLibrary.
crate-type = ["cdylib"]

[dependencies]
# Pinned to 0.21 — 0.22 split `JNIEnv` into `Env`/`EnvUnowned` (a breaking
# rewrite of the whole FFI surface this crate uses); don't bump past 0.21.x
# without migrating every `Java_dev_yog_NativeBridge_*` signature and env
# call site to the new API first.
jni = "0.21"

yog-abi = "0.18"
yog-api = "0.63"
yog-logging = "0.1"
yog-registry = "0.18"
yog-ui     = "0.26"
yog-book   = "0.46"
yog-gfx    = "0.15"
yog-inventory = "0.4"
serde_json = "1"

# Dynamic mod loading: native libs (.so/.dll/.dylib) and .yog archives.
libloading = "0.9"
zip = { version = "8", default-features = false, features = ["deflate"] }
# OpenGL bindings for low-level GPU access (client-side, render thread only).
glow = "0.17"
