[package]
name = "yog-symbols"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "DWARF symbol resolution for Yog mod natives — address<->source-location lookups used by yog-debugger and yog-hot-reload."

[lib]
crate-type = ["lib"]

[dependencies]
object.workspace = true
gimli.workspace = true
addr2line.workspace = true
